[gd_scene load_steps=23 format=2]

[ext_resource path="res://Resources/Characters/Diver/player-idle-4.png" type="Texture" id=1]
[ext_resource path="res://Resources/Characters/Diver/player-idle-1.png" type="Texture" id=2]
[ext_resource path="res://Resources/Characters/Diver/player-idle-2.png" type="Texture" id=3]
[ext_resource path="res://Resources/Characters/Diver/player-idle-3.png" type="Texture" id=4]
[ext_resource path="res://Resources/Characters/Diver/player-jump-1.png" type="Texture" id=5]
[ext_resource path="res://Resources/Characters/Diver/player-stand-3.png" type="Texture" id=6]
[ext_resource path="res://Resources/Characters/Diver/player-stand-1.png" type="Texture" id=7]
[ext_resource path="res://Character/Diver.gd" type="Script" id=8]
[ext_resource path="res://Resources/VFX/Buble/bubble.png" type="Texture" id=9]
[ext_resource path="res://Resources/Characters/Diver/player-stand-2.png" type="Texture" id=10]
[ext_resource path="res://Resources/Characters/Diver/player-jump-2.png" type="Texture" id=11]
[ext_resource path="res://Resources/Characters/Diver/player-jump-3.png" type="Texture" id=12]
[ext_resource path="res://Resources/Characters/Diver/player-hurt-1.png" type="Texture" id=13]
[ext_resource path="res://Resources/Characters/Diver/player-hurt-2.png" type="Texture" id=14]
[ext_resource path="res://Resources/VFX/Light_lamp.png" type="Texture" id=15]
[ext_resource path="res://Resources/VFX/torch_light.png" type="Texture" id=16]

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0.684783, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 10 ), ExtResource( 6 ) ],
"loop": true,
"name": "shoot",
"speed": 6.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 14 ) ],
"loop": false,
"name": "die",
"speed": 2.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 11 ) ],
"loop": true,
"name": "swim",
"speed": 8.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 4.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 8.0

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "hurt"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0.317647, 0.317647, 0.160784 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="CapsuleShape2D" id=6]
radius = 3.0
height = 7.0

[node name="Diver" type="KinematicBody2D"]
script = ExtResource( 8 )

[node name="Bubles" type="CPUParticles2D" parent="."]
texture = ExtResource( 9 )
emission_shape = 1
emission_sphere_radius = 6.28
gravity = Vector2( 0, -98 )
scale_amount = 0.02
color_ramp = SubResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "shoot"
frame = 2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 6 )
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2( 0.5, 0.5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 5 )
anims/hurt = SubResource( 4 )

[node name="DamageTimer" type="Timer" parent="."]
one_shot = true

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( -3, -6 )
texture = ExtResource( 15 )
energy = 0.75

[node name="BurnArea" type="Area2D" parent="."]
position = Vector2( 17, -3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BurnArea"]
rotation = 1.5708
shape = SubResource( 6 )

[node name="Light2D" type="Light2D" parent="BurnArea"]
enabled = false
texture = ExtResource( 16 )
texture_scale = 0.25
energy = 2.0

[node name="TorchTimer" type="Timer" parent="."]
wait_time = 0.1

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="DamageTimer" to="." method="_on_DamageTimer_timeout"]
[connection signal="area_entered" from="BurnArea" to="." method="_on_BurnArea_area_entered"]
[connection signal="area_exited" from="BurnArea" to="." method="_on_BurnArea_area_exited"]
[connection signal="body_entered" from="BurnArea" to="." method="_on_BurnArea_body_entered"]
[connection signal="body_exited" from="BurnArea" to="." method="_on_BurnArea_body_exited"]
[connection signal="timeout" from="TorchTimer" to="." method="_on_TorchTimer_timeout"]
